[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "surface"
version = "0.1.0"
description = "Guardicore developer CLI — Jenkins, Jira, profiles and caching"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1",
    "rich>=13.0",
    "httpx>=0.27",
]

[project.scripts]
surface = "surface.main:cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["surface*"]
